# IEP

./: CMakeLists.txt
Item_4/src/: stats  stats.cpp
src/: CMakeLists.txt  human.cpp  human.hpp  king.cpp  king.hpp  main.cpp  weapon.cpp  weapon.hpp
